--- a/src/lab6p2_kennethespinoza/engordar.form
+++ b/src/lab6p2_kennethespinoza/engordar.form
@@ -225,7 +225,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="tf_costobil" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="tf_costoBill" alignment="0" max="32767" attributes="0"/>
                                   <Component id="tf_consumo" alignment="0" max="32767" attributes="0"/>
                                   <Component id="tf_nombrecat" max="32767" attributes="0"/>
                                   <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -321,7 +321,7 @@
                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                       <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="tf_costobil" min="-2" max="-2" attributes="0"/>
+                      <Component id="tf_costoBill" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="30" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -417,14 +417,14 @@
                 <Property name="text" type="java.lang.String" value="Costo"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="tf_costobil">
+            <Component class="javax.swing.JTextField" name="tf_costoBill">
             </Component>
             <Component class="javax.swing.JButton" name="jb_crearbil">
               <Properties>
                 <Property name="text" type="java.lang.String" value="CREAR"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jb_crearbilActionPerformed"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_crearbilMouseClicked"/>
               </Events>
             </Component>
           </SubComponents>
